Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31060

OS X: transient scrollbars do not fade out

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.1.0
    • 5.0.2
    • None
    • OS X >= 10.7 (transient scrollbars enabled in system preferences)
    • macOS
    • qtbase/stable: 71034bb2ea24b47fd586f995f369dd78fabc431c

    Description

      If a transient scrollbar is hidden during the fade out animation, it gets stuck visible after being shown again.

      Steps to reproduce:
      1) enable transient scrollbars in system preferences
      2) run the testcase below
      3) switch to another tab while scrollbars are fading out
      4) switch back to the previous view
      => the scrollbars are stuck and do not fade out.

      #include <QtWidgets>
      
      static QScrollArea* createScrollArea(QWidget* parent = 0)
      {
          QScrollArea* sa = new QScrollArea(parent);
      
          QWidget* content = new QWidget(sa);
          content->resize(2048, 2048);
      
          QLinearGradient gradient(0, 0, 2048, 2048);
          gradient.setColorAt(0, "lightblue");
          gradient.setColorAt(1, "pink");
      
          QPalette pal;
          pal.setBrush(QPalette::Window, gradient);
          content->setPalette(pal);
          content->setAutoFillBackground(true);
      
          sa->setWidget(content);
          return sa;
      }
      
      int main(int argc, char *argv[])
      {
          QApplication app(argc, argv);
          QTabWidget widget;
          widget.resize(640, 480);
          widget.addTab(createScrollArea(&widget), "A");
          widget.addTab(createScrollArea(&widget), "B");
          widget.show();
          return app.exec();
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes